# Xsens_MVN_ROS

./: README.md
xsens_mtw_driver-release/src/: mt_w_main.cpp
xsens_receiver/: CMakeLists.txt  package.xml
xsens_receiver/msg/: xsens_data.msg
xsens_receiver/src/: xsens_rx.py
